--- a/pages/projects.html
+++ b/pages/projects.html
@@ -52,27 +52,27 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/self_site_project-300.avif 300w,
-											../assets/images/self_site_project-450.avif 450w,
-											../assets/images/self_site_project-600.avif 600w
+											../assets/images/prj1/prj1-300.avif 300w,
+											../assets/images/prj1/prj1-450.avif 450w,
+											../assets/images/prj1/prj1-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/self_site_project-300.webp 300w,
-											../assets/images/self_site_project-450.webp 450w,
-											../assets/images/self_site_project-600.webp 600w
+											../assets/images/prj1/prj1-300.webp 300w,
+											../assets/images/prj1/prj1-450.webp 450w,
+											../assets/images/prj1/prj1-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/self_site_project-450.jpg"
+										src="../assets/images/prj1/prj1-450.jpg"
 										srcset="
-											../assets/images/self_site_project-300.jpg 300w,
-											../assets/images/self_site_project-450.jpg 450w,
-											../assets/images/self_site_project-600.jpg 600w
+											../assets/images/prj1/prj1-300.jpg 300w,
+											../assets/images/prj1/prj1-450.jpg 450w,
+											../assets/images/prj1/prj1-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 										alt="Личный сайт"
@@ -94,30 +94,30 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/news_site_project-300.avif 300w,
-											../assets/images/news_site_project-450.avif 450w,
-											../assets/images/news_site_project-600.avif 600w
+											../assets/images/prj2/prj2-300.avif 300w,
+											../assets/images/prj2/prj2-450.avif 450w,
+											../assets/images/prj2/prj2-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/news_site_project-300.webp 300w,
-											../assets/images/news_site_project-450.webp 450w,
-											../assets/images/news_site_project-600.webp 600w
+											../assets/images/prj2/prj2-300.webp 300w,
+											../assets/images/prj2/prj2-450.webp 450w,
+											../assets/images/prj2/prj2-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/news_site_project-450.jpg"
+										src="../assets/images/prj2/prj2-450.jpg"
 										srcset="
-											../assets/images/news_site_project-300.jpg 300w,
-											../assets/images/news_site_project-450.jpg 450w,
-											../assets/images/news_site_project-600.jpg 600w
+											../assets/images/prj2/prj2-300.jpg 300w,
+											../assets/images/prj2/prj2-450.jpg 450w,
+											../assets/images/prj2/prj2-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
-										alt="News-приложение"
+										alt="Личный сайт"
 										width="450"
 										height="300"
 										loading="lazy"
@@ -136,30 +136,30 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/store_project-300.avif 300w,
-											../assets/images/store_project-450.avif 450w,
-											../assets/images/store_project-600.avif 600w
+											../assets/images/prj3/prj3-300.avif 300w,
+											../assets/images/prj3/prj3-450.avif 450w,
+											../assets/images/prj3/prj3-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/store_project-300.webp 300w,
-											../assets/images/store_project-450.webp 450w,
-											../assets/images/store_project-600.webp 600w
+											../assets/images/prj3/prj3-300.webp 300w,
+											../assets/images/prj3/prj3-450.webp 450w,
+											../assets/images/prj3/prj3-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/store_project-450.jpg"
+										src="../assets/images/prj3/prj3-450.jpg"
 										srcset="
-											../assets/images/store_project-300.jpg 300w,
-											../assets/images/store_project-450.jpg 450w,
-											../assets/images/store_project-600.jpg 600w
+											../assets/images/prj3/prj3-300.jpg 300w,
+											../assets/images/prj3/prj3-450.jpg 450w,
+											../assets/images/prj3/prj3-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
-										alt="Интернет-магазин"
+										alt="Личный сайт"
 										width="450"
 										height="300"
 										loading="lazy"
@@ -178,30 +178,30 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/portfolio_project-300.avif 300w,
-											../assets/images/portfolio_project-450.avif 450w,
-											../assets/images/portfolio_project-600.avif 600w
+											../assets/images/prj4/prj4-300.avif 300w,
+											../assets/images/prj4/prj4-450.avif 450w,
+											../assets/images/prj4/prj4-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/portfolio_project-300.webp 300w,
-											../assets/images/portfolio_project-450.webp 450w,
-											../assets/images/portfolio_project-600.webp 600w
+											../assets/images/prj4/prj4-300.webp 300w,
+											../assets/images/prj4/prj2-450.webp 450w,
+											../assets/images/prj4/prj4-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/portfolio_project-450.jpg"
+										src="../assets/images/prj4/prj4-450.jpg"
 										srcset="
-											../assets/images/portfolio_project-300.jpg 300w,
-											../assets/images/portfolio_project-450.jpg 450w,
-											../assets/images/portfolio_project-600.jpg 600w
+											../assets/images/prj4/prj4-300.jpg 300w,
+											../assets/images/prj4/prj4-450.jpg 450w,
+											../assets/images/prj4/prj4-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
-										alt="Портфолио"
+										alt="Личный сайт"
 										width="450"
 										height="300"
 										loading="lazy"
