--- a/index.html
+++ b/index.html
@@ -133,27 +133,27 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/prj1/prj1-300.avif 300w,
-											../assets/images/prj1/prj1-450.avif 450w,
-											../assets/images/prj1/prj1-600.avif 600w
+											./assets/images/prj1/prj1-300.avif 300w,
+											./assets/images/prj1/prj1-450.avif 450w,
+											./assets/images/prj1/prj1-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/prj1/prj1-300.webp 300w,
-											../assets/images/prj1/prj1-450.webp 450w,
-											../assets/images/prj1/prj1-600.webp 600w
+											./assets/images/prj1/prj1-300.webp 300w,
+											./assets/images/prj1/prj1-450.webp 450w,
+											./assets/images/prj1/prj1-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/prj1/prj1-450.jpg"
+										src="./assets/images/prj1/prj1-450.jpg"
 										srcset="
-											../assets/images/prj1/prj1-300.jpg 300w,
-											../assets/images/prj1/prj1-450.jpg 450w,
-											../assets/images/prj1/prj1-600.jpg 600w
+											./assets/images/prj1/prj1-300.jpg 300w,
+											./assets/images/prj1/prj1-450.jpg 450w,
+											./assets/images/prj1/prj1-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 										alt="Личный сайт"
@@ -171,27 +171,27 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/prj2/prj2-300.avif 300w,
-											../assets/images/prj2/prj2-450.avif 450w,
-											../assets/images/prj2/prj2-600.avif 600w
+											./assets/images/prj2/prj2-300.avif 300w,
+											./assets/images/prj2/prj2-450.avif 450w,
+											./assets/images/prj2/prj2-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/prj2/prj2-300.webp 300w,
-											../assets/images/prj2/prj2-450.webp 450w,
-											../assets/images/prj2/prj2-600.webp 600w
+											./assets/images/prj2/prj2-300.webp 300w,
+											./assets/images/prj2/prj2-450.webp 450w,
+											./assets/images/prj2/prj2-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/prj2/prj2-450.jpg"
+										src="./assets/images/prj2/prj2-450.jpg"
 										srcset="
-											../assets/images/prj2/prj2-300.jpg 300w,
-											../assets/images/prj2/prj2-450.jpg 450w,
-											../assets/images/prj2/prj2-600.jpg 600w
+											./assets/images/prj2/prj2-300.jpg 300w,
+											./assets/images/prj2/prj2-450.jpg 450w,
+											./assets/images/prj2/prj2-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 										alt="Личный сайт"
@@ -209,27 +209,27 @@
 									<source
 										type="image/avif"
 										srcset="
-											../assets/images/prj3/prj3-300.avif 300w,
-											../assets/images/prj3/prj3-450.avif 450w,
-											../assets/images/prj3/prj3-600.avif 600w
+											./assets/images/prj3/prj3-300.avif 300w,
+											./assets/images/prj3/prj3-450.avif 450w,
+											./assets/images/prj3/prj3-600.avif 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<source
 										type="image/webp"
 										srcset="
-											../assets/images/prj3/prj3-300.webp 300w,
-											../assets/images/prj3/prj3-450.webp 450w,
-											../assets/images/prj3/prj3-600.webp 600w
+											./assets/images/prj3/prj3-300.webp 300w,
+											./assets/images/prj3/prj3-450.webp 450w,
+											./assets/images/prj3/prj3-600.webp 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 									/>
 									<img
-										src="../assets/images/prj3/prj3-450.jpg"
+										src="./assets/images/prj3/prj3-450.jpg"
 										srcset="
-											../assets/images/prj3/prj3-300.jpg 300w,
-											../assets/images/prj3/prj3-450.jpg 450w,
-											../assets/images/prj3/prj3-600.jpg 600w
+											./assets/images/prj3/prj3-300.jpg 300w,
+											./assets/images/prj3/prj3-450.jpg 450w,
+											./assets/images/prj3/prj3-600.jpg 600w
 										"
 										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
 										alt="Личный сайт"
