Practice 16: edit contact form styles and fix bug Practice 16: edited the styles of contact forms and fixed the error of opening the modal window of the projectopen modal window of project

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,7 +16,6 @@
 		<link rel="stylesheet" href="../styles/contacts.css" />
 	</head>
 	<body class="page">
-		<!-- Skip-link для доступности -->
 		<a class="skip-link" href="#main">Перейти к основному содержимому</a>
 
 		<header>
@@ -106,7 +105,12 @@
 									height="24"
 									loading="lazy"
 								/>
-								<span>GitHub: nemolucky</span>
+								<span
+									>GitHub:
+									<a href="https://github.com/nemolucky" class="source-link"
+										>nemolucky</a
+									></span
+								>
 							</div>
 							<div class="contact-item">
 								<img
