feat: Practice 17: completed

--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
 				<div class="logo">
 					<h1>Пучко Денис</h1>
 				</div>
-				<nav class="nav" aria-label="Основная навигация">
-					<ul>
-						<li><a href="./index.html" class="active">Главная</a></li>
-						<li><a href="./pages/projects.html">Проекты</a></li>
-						<li><a href="./pages/diary.html">Дневник</a></li>
-						<li><a href="./pages/contacts.html">Контакты</a></li>
+				<nav class="nav" aria-label="Основная навигация" role="navigation">
+					<ul role="menubar">
+						<li>
+							<a
+								href="./index.html"
+								class="active"
+								aria-current="page"
+								role="menuitem"
+								>Главная</a
+							>
+						</li>
+						<li>
+							<a href="./pages/projects.html" role="menuitem">Проекты</a>
+						</li>
+						<li>
+							<a href="./pages/diary.html" role="menuitem">Дневник</a>
+						</li>
+						<li>
+							<a href="./pages/contacts.html" role="menuitem">Контакты</a>
+						</li>
 					</ul>
 				</nav>
 			</div>
