feat: Practice 17: completed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							>
 						</div>
 						<div class="hero-image">
-							<figure class="hero_image">
+							<figure>
 								<picture>
 									<source
 										type="image/avif"
@@ -69,7 +69,7 @@
 											./assets/images/student/student-450.avif 450w,
 											./assets/images/student/student-600.avif 600w
 										"
-										sizes="(max-width: 768px) 300px, 450px"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -78,17 +78,17 @@
 											./assets/images/student/student-450.webp 450w,
 											./assets/images/student/student-600.webp 600w
 										"
-										sizes="(max-width: 768px) 300px, 450px"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
-										class="hero_photo"
-										src="./assets/images/student-450.jpg"
+										class="hero-photo"
+										src="./assets/images/student/student-450.jpg"
 										srcset="
 											./assets/images/student/student-300.jpg 300w,
 											./assets/images/student/student-450.jpg 450w,
 											./assets/images/student/student-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 300px, 450px"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										width="450"
 										height="450"
 										alt="Портрет студента"
