feat: Practice 17: completed

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											./assets/images/prj1/prj1-450.avif 450w,
 											./assets/images/prj1/prj1-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -160,7 +160,7 @@
 											./assets/images/prj1/prj1-450.webp 450w,
 											./assets/images/prj1/prj1-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="./assets/images/prj1/prj1-450.jpg"
@@ -169,7 +169,7 @@
 											./assets/images/prj1/prj1-450.jpg 450w,
 											./assets/images/prj1/prj1-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
@@ -189,7 +189,7 @@
 											./assets/images/prj2/prj2-450.avif 450w,
 											./assets/images/prj2/prj2-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -198,7 +198,7 @@
 											./assets/images/prj2/prj2-450.webp 450w,
 											./assets/images/prj2/prj2-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="./assets/images/prj2/prj2-450.jpg"
@@ -207,7 +207,7 @@
 											./assets/images/prj2/prj2-450.jpg 450w,
 											./assets/images/prj2/prj2-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
@@ -227,7 +227,7 @@
 											./assets/images/prj3/prj3-450.avif 450w,
 											./assets/images/prj3/prj3-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -236,7 +236,7 @@
 											./assets/images/prj3/prj3-450.webp 450w,
 											./assets/images/prj3/prj3-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="./assets/images/prj3/prj3-450.jpg"
@@ -245,7 +245,7 @@
 											./assets/images/prj3/prj3-450.jpg 450w,
 											./assets/images/prj3/prj3-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
