--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,7 @@
 											../assets/images/prj1/prj1-450.avif 450w,
 											../assets/images/prj1/prj1-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -78,7 +78,7 @@
 											../assets/images/prj1/prj1-450.webp 450w,
 											../assets/images/prj1/prj1-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="../assets/images/prj1/prj1-450.jpg"
@@ -87,7 +87,7 @@
 											../assets/images/prj1/prj1-450.jpg 450w,
 											../assets/images/prj1/prj1-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
@@ -111,7 +111,7 @@
 											../assets/images/prj2/prj2-450.avif 450w,
 											../assets/images/prj2/prj2-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -120,7 +120,7 @@
 											../assets/images/prj2/prj2-450.webp 450w,
 											../assets/images/prj2/prj2-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="../assets/images/prj2/prj2-450.jpg"
@@ -129,7 +129,7 @@
 											../assets/images/prj2/prj2-450.jpg 450w,
 											../assets/images/prj2/prj2-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
@@ -153,7 +153,7 @@
 											../assets/images/prj3/prj3-450.avif 450w,
 											../assets/images/prj3/prj3-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -162,7 +162,7 @@
 											../assets/images/prj3/prj3-450.webp 450w,
 											../assets/images/prj3/prj3-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="../assets/images/prj3/prj3-450.jpg"
@@ -171,7 +171,7 @@
 											../assets/images/prj3/prj3-450.jpg 450w,
 											../assets/images/prj3/prj3-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
@@ -195,7 +195,7 @@
 											../assets/images/prj4/prj4-450.avif 450w,
 											../assets/images/prj4/prj4-600.avif 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<source
 										type="image/webp"
@@ -204,7 +204,7 @@
 											../assets/images/prj4/prj2-450.webp 450w,
 											../assets/images/prj4/prj4-600.webp 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 									/>
 									<img
 										src="../assets/images/prj4/prj4-450.jpg"
@@ -213,7 +213,7 @@
 											../assets/images/prj4/prj4-450.jpg 450w,
 											../assets/images/prj4/prj4-600.jpg 600w
 										"
-										sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+										sizes="(max-width: 768px) 300px, (max-width: 1200px) 450px, 600px"
 										alt="Личный сайт"
 										width="450"
 										height="300"
