--- a/index.html
+++ b/index.html
@@ -268,6 +268,6 @@
 			</div>
 		</footer>
 
-		<script src="/scripts/main.js"></script>
+		<script src="./scripts/main.js"></script>
 	</body>
 </html>
